# a6000_ros

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  install_deps.sh  package.xml  test_build.sh
include/: camera_config_defs.h  camera_connector.h  camera_node_ros.h  gphoto_drv.h
lib/: autodetect.c  config.c  context.c  gphoto_drv.h
src/: camera_config_defs.cpp  camera_connector.cpp  main.cpp
src/driver/: async_cap.c  autodetect.c  capture.c  config.c  context.c  trigger_capture.c
src/ros/: camera_node.cpp  camera_ros.cpp
src/test/: main.cpp
srv/: ConfigGet.srv  ConfigSet.srv
