<package format="2">
  <name>a6000_ros</name>
  <version>0.0.1</version>
  <description>
  Driver to stream images from a Sony a6000 on ROS using GPhoto2
  </description>
  <maintainer email="contact@lenord.me">len0rd</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

</package>